Create Add and Edit modal in templates

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -22,8 +22,80 @@
             <p class="lead">Hello Cosmin! </p>
             <p class="lead">This is the admin page. Feel free to "show off" your master skills. </p>
             <a class="btn btn-outline-light my-2 my-sm-0" href="#"
-               type="button">Add flight</a>
+               type="button" data-bs-toggle="modal"
+               data-bs-target="#addFlight">Add flight</a>
             <hr class="my-4">
+            <div class="modal" id="addFlight" role="dialog" tabindex="0"
+                 data-bs-backdrop="static">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div id="addFlight-body" class="modal-body">
+                            <div>
+                                <p>Add flight information</p>
+                            </div>
+                            <hr>
+                            <form action="#" method="POST">
+                                <input type="hidden" name="id" value="">
+                                <div class="form-group">
+                                    <div class=" form-group">
+                                        <label>Airline :</label>
+                                        <select name="airline" id="select-airline">
+                                            <option value="" selected></option>
+                                            <option value="">hida hida</option>
+                                        </select>
+                                    </div>
+                                    <div class=" form-group">
+                                        <label>Departure Airport :</label>
+                                        <select name="departure-airport" id="select-airport">
+                                            <option value="" selected></option>
+                                            <option value="">bla bla</option>
+                                        </select>
+                                    </div>
+                                    <div class=" form-group">
+                                        <label>Arrival Airport :</label>
+                                        <select name="arrival-airport" id="select-airport">
+                                            <option value="" selected></option>
+                                            <option value="">hida hida</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Departure - date/time</label>
+                                        <div class="form-group form-control inline bg-transparent">
+                                            <input id="date-form-width" type="date"
+                                                   name="departure-date"
+                                                   value="">
+                                            <input id="date-form-width" type="time"
+                                                   name="departure-time">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Arrival - date/time</label>
+                                        <div class="form-group form-control inline bg-transparent">
+                                            <input id="date-form-width" type="date"
+                                                   name="arrival-date"
+                                                   value="">
+                                            <input id="date-form-width" type="time"
+                                                   name="arrival-time">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Flight number</label>
+                                        <input type="text" class="form-control" name="flight-number"
+                                               value="">
+                                    </div>
+                                    <hr>
+                                    <div class="form-group">
+                                        <button class="btn btn-outline-light" type="sbumit">Save flight
+                                        </button>
+                                        <button type="button" class="btn btn-outline-danger"
+                                                data-bs-dismiss="modal">Close
+                                        </button>
+                                    </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
@@ -50,9 +122,10 @@
             <div class="controls-row row">
                 <div class="control-group col-md-12">
                     <div class="table-responsive-md ">
-                        <table class="table table-bordered-rounded border-light" id="dashboard-table">
+                        <table class="table table-bordered border-light" id="dashboard-table">
                             <div th:if="${param.success}">
-                                <div class="row alert alert-outline-success text-white">Flight was successfuly deleted</div>
+                                <div class="row alert alert-outline-success text-white">Flight was successfuly deleted
+                                </div>
                             </div>
                             <tr>
                                 <th scope="col">Airline</th>
@@ -65,7 +138,9 @@
                             </tr>
                             <tr th:each="flight: ${flights}">
                                 <td hidden="1" th:text="${flight.id}"> ***</td>
-                                <td th:text="${flight.airline.airlineName + ' (' + flight.airline.airlineCode + ')'}"> ***</td>
+                                <td th:text="${flight.airline.airlineName + ' (' + flight.airline.airlineCode + ')'}">
+                                    ***
+                                </td>
                                 <td th:text="${flight.flightNumber}"> ***</td>
                                 <td th:text="${flight.departureAirport.airportName}"> ***</td>
                                 <td th:text="${#dates.format(flight.departureDate, 'dd.MM.yyyy HH:mm')}"> ***</td>
@@ -75,14 +150,89 @@
                                     <div class="d-flex justify-content-left">
                                         <a href="#"
                                            class="btn btn-outline-light btn-xs"
-                                           style="padding: 5px; margin: 2px" title="Edit">
+                                           style="padding: 5px; margin: 2px" data-bs-toggle="modal"
+                                           data-bs-target="#editModal" title="Edit">
                                             <img src="https://img.icons8.com/pastel-glyph/16/ffffff/edit--v1.png"/>
                                         </a>
                                         <a th:href="@{/delete/{id}(id=${flight.id})}"
                                            class="btn btn-outline-danger btn-xs"
                                            style="padding: 5px; margin: 2px"
                                            onclick="return confirm('You are about to `drop down` a flight. Are you sure you wanna do that?')"
-                                           title="Delete"><img src="https://img.icons8.com/flat-round/16/000000/delete-sign.png"/></a>
+                                           title="Delete"><img
+                                                src="https://img.icons8.com/flat-round/16/000000/delete-sign.png"/></a>
+                                    </div>
+                                    <div class="modal" id="editModal" role="dialog" tabindex="0"
+                                         data-bs-backdrop="static">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div id="mymodal-body" class="modal-body">
+                                                    <div>
+                                                        <p>Add flight information</p>
+                                                    </div>
+                                                    <hr>
+                                                    <form action="#" method="POST">
+                                                        <input type="hidden" name="id" value="">
+                                                        <div class="form-group">
+                                                            <div class=" form-group">
+                                                                <label>Airline :</label>
+                                                                <select name="airline" id="select-airline">
+                                                                    <option value="" selected></option>
+                                                                    <option value="">hida hida</option>
+                                                                </select>
+                                                            </div>
+                                                            <div class=" form-group">
+                                                                <label>Departure Airport :</label>
+                                                                <select name="departure-airport" id="select-airport">
+                                                                    <option value="" selected></option>
+                                                                    <option value="">bla bla</option>
+                                                                </select>
+                                                            </div>
+                                                            <div class=" form-group">
+                                                                <label>Arrival Airport :</label>
+                                                                <select name="arrival-airport" id="select-airport">
+                                                                    <option value="" selected></option>
+                                                                    <option value="">hida hida</option>
+                                                                </select>
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <label>Departure - date/time</label>
+                                                                <div class="form-group form-control inline bg-transparent">
+                                                                    <input id="date-form-width" type="date"
+                                                                           name="departure-date"
+                                                                           value="">
+                                                                    <input id="date-form-width" type="time"
+                                                                           name="departure-time">
+                                                                </div>
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <label>Arrival - date/time</label>
+                                                                <div class="form-group form-control inline bg-transparent">
+                                                                    <input id="date-form-width" type="date"
+                                                                           name="arrival-date"
+                                                                           value="">
+                                                                    <input id="date-form-width" type="time"
+                                                                           name="arrival-time">
+                                                                </div>
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <label>Flight number</label>
+                                                                <input type="text" class="form-control"
+                                                                       name="flight-number"
+                                                                       value="">
+                                                            </div>
+                                                            <hr>
+                                                            <div class="form-group">
+                                                                <button class="btn btn-outline-light" type="sbumit">Save
+                                                                    flight
+                                                                </button>
+                                                                <button type="button" class="btn btn-outline-danger"
+                                                                        data-bs-dismiss="modal">Close
+                                                                </button>
+                                                            </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </td>
                             </tr>
@@ -105,9 +255,8 @@
             </div>
         </div>
     </div>
-    </div>
-    </div>
-    </div>
+
+
 </section>
 <footer th:replace="footer::footer-base"></footer>
 <script src="#" th:replace="base :: bootstrap-js"></script>
