--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,7 +24,7 @@
     <div class="col-md-6 offset-md-3">
         <form method="post" th:action="@{/login}">
             <div class="mb-6">
-                <div th:if="${param.logout}">
+                <div th:if="${param.logout}" class="success text-success">
                     You have been successfully logged out.
                 </div>
             </div>
